Update performance endpoint format, redesign filter/returns endpoints, add ValidTransaction/InvalidTransaction models